<resources>
    <string name="app_name">SuperFit</string>
    <string name="username">UserName</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="repeat_code">Repeat Code</string>
    <string name="super_fit">SuperFit</string>
    <string name="details">Details</string>
    <string name="last_exercises">Last exercises</string>
    <string name="see_all">See all</string>
    <string name="plank">Plank</string>
    <string name="recipes">Recipes</string>
    <string name="sign_out">Sign out</string>
    <string name="exercises">Exercises</string>
    <string name="squats">Squats</string>
    <string name="crunch">Crunch</string>
    <string name="running">Running</string>
    <string name="search">Search</string>
    <string name="my_body">My body</string>
    <string name="balanced">Balanced</string>
    <string name="high_protein">High-Protein</string>
    <string name="recipe">Recipe</string>
</resources>